--- a/style.css
+++ b/style.css
@@ -103,12 +103,31 @@ div ul li ion-icon {
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
 body .technology {
-  margin: 20px 0px 0px 40px;
+  margin: 20px 0px 0px 30px;
   width: 121px;
   height: 26px;
   flex-shrink: 0;
   font-family: Merriweather Sans;
   font-size: 20px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+.table-technology td {
+  padding: 5px;
+  display: inline-table;
+  width: 86px;
+  height: 24px;
+  flex-shrink: 0;
+  border-radius: 30px;
+  background: #cb92b1;
+  text-align: center;
+  margin: 15px 0px 0px 15px;
+  color: #000;
+  text-align: center;
+  font-family: Merriweather Sans;
+  font-size: 14px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
