--- a/style.css
+++ b/style.css
@@ -13,6 +13,15 @@ body {
   background: #302f3d;
   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
+#about p {
+  position: absolute;
+  margin: 250px 0px 0px 170px;
+  font-family: Merriweather Sans;
+  font-size: 19px;
+  font-style: normal;
+  font-weight: 100;
+  line-height: normal;
+}
 body p {
   position: absolute;
   margin: 180px 0px 0px 90px;
@@ -101,7 +110,7 @@ div ul li ion-icon {
   flex-shrink: 0;
   color: white;
   font-family: Merriweather Sans;
-  font-size: 20px;
+  font-size: 19px;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
@@ -167,4 +176,35 @@ body .technology {
   line-height: normal;
   position: absolute;
   margin: 30px 0px 0px 30px;
+}
+
+li h3 {
+  margin: 40px 0px 0px 30px;
+  color: white;
+  font-family: Merriweather Sans;
+  font-size: 1px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+}
+
+li h4 {
+  position: absolute;
+  margin: 5px 0px 0px 60px;
+  font-family: Merriweather Sans;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+}
+
+#footer_about {
+  border: 1px solid red;
+  color: white;
+  margin: 40px;
+  height: 400px;
+  flex-shrink: 0;
+  border-radius: 20px;
+  background: #302f3d;
+  box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
 }
